Add c2hs to build-tool-depends
Notice with this change, `cabal` can't see the `c2hs` provided by Nix as
specified through `libsodium/pkg.nix`'s
`libraryToolDepends` and `testToolDepends`. This still needs solving.

See issue #2

--- a/libsodium/libsodium.cabal
+++ b/libsodium/libsodium.cabal
@@ -20,6 +20,7 @@ common basic
   ghc-options: -Wall -Werror=incomplete-patterns
   build-depends: base == 4.*
   pkgconfig-depends: libsodium == 1.0.18
+  build-tool-depends: c2hs:c2hs
 
 library
   import: basic
