Reorganize repository as Nix flake. Fix ch2s installation in cabal.

--- a/cabal.project
+++ b/cabal.project
@@ -1,4 +1,6 @@
-compiler: ghc
+profiling: True
+profiling-detail: all-functions
+optimization: True
+documentation: True
 tests: True
-packages:
-  libsodium/
+packages: ./
