--- a/libsodium.cabal
+++ b/libsodium.cabal
@@ -14,6 +14,8 @@ description: Low-level bindings to the libsodium C library
 homepage: https://github.com/k0001/hs-libsodium
 bug-reports: https://github.com/k0001/hs-libsodium/issues
 tested-with: GHC ==9.2.6
+extra-source-files: c/*.h c/*.c
+
 
 flag use-build-tool-depends
   description: Sometimes Cabal doesn't see build tools listed in
@@ -26,7 +28,7 @@ flag use-build-tool-depends
   manual: False
 
 common basic
-  default-language: Haskell2010
+  default-language: GHC2021
   ghc-options: -Wall -Werror=incomplete-patterns
   build-depends: base == 4.*
   pkgconfig-depends: libsodium == 1.0.18
@@ -35,9 +37,11 @@ common basic
 
 library
   import: basic
-  hs-source-dirs: lib
+  hs-source-dirs: hs
   exposed-modules: Libsodium
   other-modules: Libsodium.Constants
+  c-sources: c/hs_libsodium.c
+  include-dirs: c/
 
 test-suite test
   import: basic
